[project]
name = "pysaas"
version = "0.1.0"
description = "A comprehensive SaaS blueprint and framework in a monorepo structure, built with Python microservices and modern cloud-native practices."
authors = [
    {name = "VENKATESH C V", email = "venkateshvairam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
repository = "https://github.com/venkateshcv1809/pysaas"
homepage = "https://github.com/venkateshcv1809/pysaas"
keywords = ["saas", "python", "microservices", "blueprint", "cloud-native", "monorepo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.packages]
# This specifies that Python packages are found in the 'services' directory.
# Each sub-directory within 'services' will typically be its own microservice/package.
include = [
    { from = "services", to = "services" },
]

[tool.poetry.group.dev.dependencies]
# Development dependencies go here. These are not required for the final deployed application.
black = "^24.4.2"      # Code formatter
isort = "^5.13.2"      # Import sorter
flake8 = "^7.0.0"      # Linter
pytest = "^8.1.1"      # Testing framework

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"