[project]
name = "pysaas"
version = "0.1.0"
description = "A comprehensive SaaS blueprint and framework in a monorepo structure, built with Python microservices and modern cloud-native practices."
authors = [
    {name = "VENKATESH C V", email = "venkateshvairam@gmail.com"} # CORRECTED: Back to list of objects
]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
repository = "https://github.com/venkateshcv1809/pysaas"
homepage = "https://github.com/venkateshcv1809/pysaas"
keywords = ["saas", "python", "microservices", "blueprint", "cloud-native", "monorepo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry]
packages = [
    { include = "services" }
]


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"